Introaduccion a Ansible - Lab

--- a/vagrant/Vagrant/Vagrantfile
+++ b/vagrant/Vagrant/Vagrantfile
@@ -4,13 +4,13 @@ vm_name = "centos-wintest"
 vm_forwarded_port = 8080
 
 $script = <<-'SCRIPT'
-ip address add 172.23.240.10/20 dev eth0
-ip route add default via 172.23.240.1 dev eth0
-echo "nameserver 192.168.1.1" > /etc/resolv.conf
+ip address add 172.17.224.10/20 dev eth0
+ip route add default via 172.17.224.1 dev eth0
+echo "nameserver 8.8.8.8" > /etc/resolv.conf
 SCRIPT
 
 Vagrant.configure(2) do |config|
-  config.vm.box = "hashicorp/bionic64"
+  config.vm.box = "generic/ubuntu2010"
   config.vm.provider "hyperv"
   config.vm.network "public_network", bridge: "WSL"
   config.vm.synced_folder ".", "/vagrant",disabled: true
