--- a/Main-Repo/inventories/server.yml
+++ b/Main-Repo/inventories/server.yml
@@ -7,4 +7,5 @@ all:
     ansible_ssh_pass: vagrant
     ansible_user: vagrant
     ansible_pass: vagrant
-
+    server_name: "{{ ansible_default_ipv4.address }}"
+    app_root: "html_demo_site-main"
